🎯Express Routes: Dividiendo archivo tec.js en dos

--- a/server/views/tec.jade
+++ b/server/views/tec.jade
@@ -6,4 +6,4 @@ block content
   p Descripción: #{description}
   p Misión: #{mission}
   p Valores: #{values}
-  img(src=image, alt="Tecnologico de Gustavo A Madero")
+  img(src=image, alt="Instituto Tecnologico de Gustavo A Madero")
