--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -7,18 +7,9 @@
     <script src="/bundle.js" defer></script>
   </head>
   <body>
-    <nav>
-      <div class="container">
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo">LOGO</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#">Oper 1</a></li>
-            <li><a href="#">Oper 2</a></li>
-            <li><a href="#">Oper 3</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    {{!-- Llamando a la vista parcial de la barra de navegacion --}}
+    {{> _navbar }}
+
     <div class="container">
       {{{body}}}
     </div>
