✨Improving the Navbar

--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -3,15 +3,17 @@
   <head>
     <title>{{title}}</title>
     <link rel="shortcut icon" href="/favicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel='stylesheet' href='/styles/app.css' />
     <script src="/bundle.js" defer></script>
+
   </head>
   <body>
     {{!-- Llamando a la vista parcial de la barra de navegacion --}}
     {{> _navbar }}
-
+    
     <div class="container">
-      {{{body}}}
+    {{{body}}}
     </div>
   </body>
 </html>
