--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -11,3 +11,14 @@ a {
 h1 {
   color: teal;
 }
+
+#brand-logo-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#brand-logo-img img {
+  margin-right: 10px; /* Add some space between the image and text if desired */
+} 
