--- a/server/views/partials/_navbar.hbs
+++ b/server/views/partials/_navbar.hbs
@@ -1,11 +1,34 @@
-<nav>
-  <div class="container">
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">LOGO</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#">Oper 1</a></li>
-        <li><a href="#">Oper 2</a></li>
-        <li><a href="#">Oper 3</a></li>
+<nav class='teal darken-1'>
+  <div class='container'>
+    <div class='nav-wrapper'>
+      <!-- Barra de navegación completa -->
+      <a href='/' class='brand-logo'>
+        <div id='brand-logo-img'>
+          <img src='/images/projnotes-logo.jpeg' width='50px' alt='logo' />
+          Projnotes
+        </div>
+      </a>
+      <ul id='nav-mobile' class='right hide-on-med-and-down'>
+        <li>
+          <a href='/'>
+            <i class='large material-icons right'>home</i>
+            Inicio
+          </a>
+        </li>
+        <li>
+          <a href='/about'>
+            <i class='material-icons right'>business</i>
+            Acerca De
+          </a>
+        </li>
+      </ul>
+      <!-- Barra de navegación Móvil -->
+      <a href='#' data-target='slide-out' class='sidenav-trigger'>
+        <i class='material-icons'>menu</i>
+      </a>
+      <ul id='slide-out' class='sidenav'>
+        <li><a href='/'>Inicio</a></li>
+        <li><a href='/about'>Acerda De...</a></li>
       </ul>
     </div>
   </div>
