--- a/server/views/partials/_navbar.hbs
+++ b/server/views/partials/_navbar.hbs
@@ -1,34 +1,163 @@
-<nav class='teal darken-1'>
-  <div class='container'>
-    <div class='nav-wrapper'>
-      <!-- Barra de navegación completa -->
-      <a href='/' class='brand-logo'>
-        <div id='brand-logo-img'>
-          <img src='/images/projnotes-logo.jpeg' width='50px' alt='logo' />
-          Projnotes
-        </div>
+<!-- Dropdow para menu "Projectos" -->
+<ul id="dropdownMenu" class="dropdown-content">
+  <li>
+    <a href="/projects">
+      <i class="large material-icons" style="margin: 2px;">
+        list
+      </i>
+      Listar Proyectos
+    </a>
+  </li>
+  <li class="divider"></li>
+  <li>
+    <a href="/projects/add">
+      <i class="large material-icons" style="margin: 2px;">
+        add_box
+      </i>
+      Crear Proyecto
+    </a>
+  </li>
+</ul>
+
+<!-- Dropdow para menu "Usuarios" -->
+<ul id="user-dropdown-menu" class="dropdown-content">
+  <li>
+    <a href="/user/login">
+      <i class="large material-icons" style="margin: 2px;">
+        login
+      </i>
+      Ingresar
+    </a>
+  </li>
+  <li class="divider"></li>
+    <li>
+    <a href="/user/register">
+      <i class="large material-icons" style="margin: 2px;">
+        person_add
+      </i>
+      Registrarse
+    </a>
+  </li>
+  <li>
+    <a href="/user/logout">
+      <i class="large material-icons" style="margin: 2px;">
+        logout
+      </i>
+      Cerrar sesion
+    </a>
+  </li>
+</ul>
+
+<!-- Inicia marcado de barra de navegación -->
+<nav class="teal darken-4">
+  <div class="container">
+    <div class="nav-wrapper">
+      <!-- Visulización de navegación en pantalla completa -->
+      <a href="/" class="brand-logo">
+        📒 ProjNotes
       </a>
-      <ul id='nav-mobile' class='right hide-on-med-and-down'>
+      <ul id="nav" class="right hide-on-med-and-down">
         <li>
-          <a href='/'>
-            <i class='large material-icons right'>home</i>
+          <a href="/">
+            <i class="large material-icons right">
+              home
+            </i>
             Inicio
           </a>
         </li>
         <li>
-          <a href='/about'>
-            <i class='material-icons right'>business</i>
-            Acerca De
+          <a href="/about">
+            <i class="material-icons right">
+              business
+            </i>
+            Acerca De.
+          </a>
+        </li>
+        <!-- Dropdown Trigger -->
+        <li>
+          <a class="dropdown-trigger" href="#!" data-target="dropdownMenu">
+            Acciones
+            <i class="material-icons right">
+              arrow_drop_down
+            </i>
+          </a>
+        </li>
+        <!-- User Dropdown -->
+        <li>
+          <a class="dropdown-trigger" href="#!" data-target="user-dropdown-menu">
+            Usuario
+            <i class="material-icons right">
+              people
+            </i>
           </a>
         </li>
       </ul>
-      <!-- Barra de navegación Móvil -->
-      <a href='#' data-target='slide-out' class='sidenav-trigger'>
-        <i class='material-icons'>menu</i>
+      <!-- Visulización de Navegación para moviles -->
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger">
+        <i class="material-icons">
+          menu
+        </i>
       </a>
-      <ul id='slide-out' class='sidenav'>
-        <li><a href='/'>Inicio</a></li>
-        <li><a href='/about'>Acerda De...</a></li>
+      <ul id="nav-mobile" class="sidenav">
+        <li>
+          <a href="/">
+            <i class="large material-icons left">
+              home
+            </i>
+            Inicio
+          </a>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <a href="/projects">
+            <i class="large material-icons left">
+              list
+            </i>
+            Listar Proyectos
+          </a>
+        </li>
+        <li>
+          <a href="/projects/add">
+            <i class="large material-icons left">
+              add_box
+            </i>
+            Crear Proyecto
+          </a>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <a href="/user/login">
+            <i class="material-icons left">
+              login
+            </i>
+            Ingresar
+          </a>
+        </li>
+        <li>
+          <a href="/user/register">
+            <i class="material-icons left">
+              person_add
+            </i>
+            Registrarse
+          </a>
+        </li>
+        <li>
+          <a href="/user/logout">
+            <i class="material-icons left">
+              logout
+            </i>
+            Cerrar Sesión
+          </a>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <a href="/about">
+            <i class="material-icons left">
+              business
+            </i>
+            Acerca De.
+          </a>
+        </li>
       </ul>
     </div>
   </div>
