--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,24 +1,13 @@
-body {
+body{
   padding: 50px;
   font-size: 14px;
-  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
+  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00b7ff;
+a{
+  color: #00B7FF;
 }
 
-h1 {
+h1{
   color: teal;
 }
-
-#brand-logo-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-#brand-logo-img img {
-  margin-right: 10px; /* Add some space between the image and text if desired */
-} 
