--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,6 +1,2 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
-  p Author: #{author}
+<h1>{{icon}} {{title}}</h1>
+<p>Welcome to my awesome project page</p>
