--- a/server/views/project/addView.hbs
+++ b/server/views/project/addView.hbs
@@ -17,12 +17,17 @@
               name='name'
               type='text'
               class="validate"
-              		value="{{ project.name }}"
-  />
-  {{#if errorModel.name }}
-    <span style="color: crimson;">Error: {{ errorModel.name }}</span>
-  {{/if}}
-            
+              value="{{ project.name }}"
+              required
+            />
+            <span 
+              class="helper-text"
+              data-error="Es necesario ingresar el nombre del proyecto"
+              data-success="✅ Correcto"
+              ></span>
+            {{#if errorModel.name }}
+            <span style="color: crimson;">Error: {{ errorModel.name }}</span>
+            {{/if}}
           </div>
           <div class='input-field'>
             <label for='project-description'>
@@ -31,10 +36,15 @@
             <textarea
               id='project-description'
               name='description'
-              class="materialize-textarea" required>{{project.description}}</textarea>
-  {{#if errorModel.description }}
-    <span style="color: crimson;">Error: {{ errorModel.description }}</span>
-  {{/if}}
+              class="materialize-textarea validate" required>{{project.description}}</textarea>
+              <span 
+              class="helper-text"
+              data-error="Debe ingresar una descripción"
+              data-success="✅ Correcto"
+              ></span>
+            {{#if errorModel.description }}
+            <span style="color: crimson;">Error: {{ errorModel.description }}</span>
+            {{/if}}
           </div>
         </div>
         <div class="card-action">
