--- a/server/views/project/dashboardView.hbs
+++ b/server/views/project/dashboardView.hbs
@@ -8,8 +8,17 @@
           <p>{{description}}</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
+					<a href="/project/edit/{{_id}}">
+            <i class="material-icons" 
+              style = "display: inline-flex; vertical-align: sub;">edit</i>
+            <span >Editar Proyecto</span>
+          </a>
+          <a href="javascript: deleteProject('{{_id}}')" class="inline">
+            <i class="material-icons" 
+	            style = "display: inline-flex; vertical-align: sub;">
+	            delete</i>
+            Borrar Proyecto
+          </a>
         </div>
       </div>
     </div>
