--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,13 +1,37 @@
-body{
+body {
   padding: 50px;
   font-size: 14px;
-  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
 
-a{
-  color: #00B7FF;
+a {
+  color: #00b7ff;
 }
 
-h1{
+h1 {
   color: teal;
+}
+
+#brand-logo-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#brand-logo-img img {
+  margin-right: 10px; /* Add some space between the image and text if desired */
+} 
+
+.card-title.add-project{
+  color: #FFF;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+  font: 24px;
+}
+
+#toast-container {
+  top: auto !important;
+  right: auto !important;
+  bottom: 70%;
+  left:40%;
 }
