✨ Estructuracion del proyecto

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,2 +1,3 @@
-<h1>{{icon}} {{title}}</h1>
-<p>Welcome to my awesome project page</p>
+<h1>{{title}}</h1>
+<p>Welcome to {{title}}</p>
+<p>👨‍💻 Author: {{author}}</p>
