--- a/server/views/layouts/errors.hbs
+++ b/server/views/layouts/errors.hbs
@@ -2,16 +2,16 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel='stylesheet' href='/styles/app.css' />
-    <meta name"theme-color" content="dc143c">
+    <meta name="theme-color" content="#dc143c">
     <script src="/bundle.js" defer></script>
-  </head>
- 
 
+  </head>
+  <body>
     <div class="container">
-      {{{body}}}
+    {{{body}}}
     </div>
   </body>
 </html>
