--- a/server/views/partials/_navbar.hbs
+++ b/server/views/partials/_navbar.hbs
@@ -1,46 +1,46 @@
 <!-- Dropdow para menu "Projectos" -->
-<ul id="dropdownMenu" class="dropdown-content">
+<ul id='dropdownMenu' class='dropdown-content'>
   <li>
-    <a href="/project">
-      <i class="large material-icons" style="margin: 2px;">
+    <a href='/project/showDashboard'>
+      <i class='large material-icons' style='margin: 2px;'>
         list
       </i>
-      Listar
+      Listar Proyectos
     </a>
   </li>
-  <li class="divider"></li>
+  <li class='divider'></li>
   <li>
-    <a href="/project/add">
-      <i class="large material-icons" style="margin: 2px;">
+    <a href='/project/add'>
+      <i class='large material-icons' style='margin: 2px;'>
         add_box
       </i>
-      Crear
+      Crear Proyecto
     </a>
   </li>
 </ul>
 
 <!-- Dropdow para menu "Usuarios" -->
-<ul id="user-dropdown-menu" class="dropdown-content">
+<ul id='user-dropdown-menu' class='dropdown-content'>
   <li>
-    <a href="/user/login">
-      <i class="large material-icons" style="margin: 2px;">
+    <a href='/user/login'>
+      <i class='large material-icons' style='margin: 2px;'>
         login
       </i>
       Ingresar
     </a>
   </li>
-  <li class="divider"></li>
-    <li>
-    <a href="/user/register">
-      <i class="large material-icons" style="margin: 2px;">
+  <li class='divider'></li>
+  <li>
+    <a href='/user/register'>
+      <i class='large material-icons' style='margin: 2px;'>
         person_add
       </i>
       Registrarse
     </a>
   </li>
   <li>
-    <a href="/user/logout">
-      <i class="large material-icons" style="margin: 2px;">
+    <a href='/user/logout'>
+      <i class='large material-icons' style='margin: 2px;'>
         logout
       </i>
       Cerrar sesion
@@ -48,26 +48,28 @@
   </li>
 </ul>
 
-<!-- Inicia marcado de barra de navegación -->
-<nav class="teal darken-4">
-  <div class="container">
-    <div class="nav-wrapper">
-      <!-- Visulización de navegación en pantalla completa -->
-      <a href="/" class="brand-logo">
-        📒 ProjNotes
+<nav class='teal darken-1'>
+  <div class='container'>
+    <div class='nav-wrapper'>
+      <!-- Barra de navegación completa -->
+      <a href='/' class='brand-logo'>
+        <div id='brand-logo-img'>
+          <img src='/images/projnotes-logo.jpeg' width='50px' alt='logo' />
+          Projnotes
+        </div>
       </a>
-      <ul id="nav" class="right hide-on-med-and-down">
+      <ul id='nav' class='right hide-on-med-and-down'>
         <li>
-          <a href="/">
-            <i class="large material-icons right">
+          <a href='/'>
+            <i class='large material-icons right'>
               home
             </i>
             Inicio
           </a>
         </li>
         <li>
-          <a href="/about">
-            <i class="material-icons right">
+          <a href='/about'>
+            <i class='material-icons right'>
               business
             </i>
             Acerca De.
@@ -75,24 +77,28 @@
         </li>
         <!-- Dropdown Trigger -->
         <li>
-          <a class="dropdown-trigger" href="#!" data-target="dropdownMenu">
-            Proyectos
-            <i class="material-icons right">
+          <a class='dropdown-trigger' href='#!' data-target='dropdownMenu'>
+            Acciones
+            <i class='material-icons right'>
               arrow_drop_down
             </i>
           </a>
         </li>
         <!-- User Dropdown -->
         <li>
-          <a class="dropdown-trigger" href="#!" data-target="user-dropdown-menu">
+          <a
+            class='dropdown-trigger'
+            href='#!'
+            data-target='user-dropdown-menu'
+          >
             Usuario
-            <i class="material-icons right">
+            <i class='material-icons right'>
               people
             </i>
           </a>
         </li>
       </ul>
-      <!-- Visulización de Navegación para moviles -->
+      <!-- Barra de navegación Móvil -->
       <a href="#" data-target="nav-mobile" class="sidenav-trigger">
         <i class="material-icons">
           menu
@@ -109,7 +115,7 @@
         </li>
         <li class="divider"></li>
         <li>
-          <a href="/project">
+          <a href="/project/showDashboard">
             <i class="large material-icons left">
               list
             </i>
