--- a/server/views/project/editView.hbs
+++ b/server/views/project/editView.hbs
@@ -4,10 +4,10 @@
       <div class='card-image'>
         <img src='/images/addproject.png' alt='Imagen creacion de proyecto' />
         <span class='card-title add-project' style='font-weight: bolder;'>
-          Crear Proyecto
+          Editar Proyecto
         </span>
       </div>
-      <form autocomplete='off' action='/project/add' method='post'>
+      <form autocomplete='off' action="/project/edit/{{ project._id }}?_method=put" method="post">
         <div class='card-content'>
           <div class='input-field'>
             <label for='project-name'>
@@ -54,8 +54,8 @@
         </div>
         <div class='card-action'>
           <button class='blue darken-3 waves-effect waves-light btn'>
-            <i class='material-icons left'>note_add</i>
-            Agregar
+            <i class='material-icons left'>edit</i>
+            Editar
           </button>
         </div>
       </form>
